# asyncOrderProcessorServices

./: .dockerignore  .env.db_orders_example  .env.db_processor_example  .env.prod_orders_example  .env.prod_processor_example  .env.rabbitmq  Makefile  README.md  docker-compose.yml
service-orders/: .env.dev_orders_example  Dockerfile  Makefile  alembic.ini  pyproject.toml
service-orders/alembic/: env.py
service-orders/alembic/versions/: 3c7457de4f26_initial_orders_migrate.py
service-orders/src/: container.py  exceptions.py  logger.py  main.py  settings.py
service-orders/src/api/: handlers_exceptions.py
service-orders/src/entity/: orders.py
service-orders/src/infrastructure/: container.py
service-orders/src/infrastructure/messaging/: outbox_publisher.py  rabbitmq_client.py
service-orders/src/infrastructure/persistence/: uow.py
service-orders/src/usecase/: container.py
service-orders/src/usecase/orders/: orders_usecase.py
service-orders/tests/: test_orders_handler.py  test_orders_usecase.py
service-processor/: .env.dev_processor_example  Dockerfile  Makefile  alembic.ini  pyproject.toml  pytest.ini  run.py
service-processor/alembic/: env.py
service-processor/alembic/versions/: b4bd934051a0_initial_processor_migrate.py
service-processor/src/: container.py  exceptions.py  logger.py  main.py  settings.py
service-processor/src/entity/: processing.py
service-processor/src/infrastructure/: container.py
service-processor/src/usecase/: container.py
service-processor/tests/: test_processing_usecase.py
(+15 files in other folders)
