[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "service-processor"
version = "0.1.0"
description = "Order processing service microservice"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "dependency-injector",
    "pydantic-settings",
    "aio-pika",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "python-json-logger",
    "alembic",
    "pytest",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-dir]
"" = "."
